<resources>
    <string name="app_name">Flashcards</string>
    <string name="question">Enter question</string>
    <string name="asnwer">Enter answer</string>
    <string name="goBack">Back</string>
    <string name="addFlashcard">Add</string>
    <string name="emptyFieldToast">This can not be empty!</string>
    <string name="FlashcardAdded">Flashcard added successfully!</string>
    <string name="enterEmailToast">Please enter email!</string>
    <string name="enterPasswordToast">Please enter password!</string>
    <string name="pdWaitMessage">Please Wait</string>
    <string name="doesntExistToast">This user doesn\'nt exist!</string>
    <string name="emailHint">Email</string>
    <string name="loginButton">Login</string>
    <string name="noAccountRegister">You don\'t have account? Register now!</string>
    <string name="helloMessage">Hello</string>
    <string name="app">App</string>
    <string name="dialogEnd">This is the end</string>
    <string name="dialogEndMore">go back to chose another section</string>
    <string name="dialogReady">Are you ready?</string>
    <string name="dialogStart">Start</string>
    <string name="ok">Ok</string>
    <string name="correctToast">That\'s the correct answer!</string>
    <string name="tryToast">You didint even try!</string>
    <string name="errorRegisterToast">You registration was not successfully</string>
    <string name="enterAnswer">Enter your answer</string>
    <string name="Question">Question</string>
    <string name="pressNext">Press "I know" to start</string>
    <string name="iknow">I know</string>
    <string name="correctAsnwer">Correct Answer</string>
    <string name="dontKnow">I dont know</string>
    <string name="show">show</string>
    <string name="choseSection">Chose section</string>
    <string name="finishedFlashcard">Finished Flashcards</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="passwordHint">Password</string>
    <string name="register">Register</string>
    <string name="goBackToLogin">Go back to login</string>
</resources>
