<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar">
    </include>

    <TextView
        android:id="@+id/PodajTlumaczenie"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:text="@string/enterAnswer"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextPoAngielskuEdittextKoniec"
        android:background="@drawable/rounded_edittext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PodajTlumaczenie" />

    <TextView
        android:id="@+id/FiszkaPoPolsku"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/Question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPoAngielskuEdittextKoniec"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/WyswietlTekstPoPolskuKoniec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pressNext"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/TextPoAngielskuEdittextKoniec"
        app:layout_constraintStart_toStartOf="@+id/TextPoAngielskuEdittextKoniec"
        app:layout_constraintTop_toBottomOf="@+id/FiszkaPoPolsku" />

    <TextView
        android:id="@+id/PoprawneTlumaczenieKoniec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/correctAsnwer"
        app:layout_goneMarginTop="24dp"
        android:lines="7"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WyswietlTekstPoPolskuKoniec" />

    <TextView
        android:id="@+id/Tlumaczenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/WyswietlTekstPoPolskuKoniec"
        app:layout_constraintStart_toStartOf="@+id/WyswietlTekstPoPolskuKoniec"
        app:layout_constraintTop_toBottomOf="@+id/PoprawneTlumaczenieKoniec" />

    <Button
        android:background="@drawable/rounded_button"
        android:id="@+id/NieWiemButtonKoniec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/dontKnow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:background="@drawable/rounded_button"
        android:id="@+id/WiemButtonKoniec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/iknow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:background="@drawable/rounded_button"
        android:id="@+id/PokazButtonKoniec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/WiemButton"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toEndOf="@+id/NieWiemButtonKoniec" />


</android.support.constraint.ConstraintLayout>